Remove chrome werid shadows && fix polybar shortcuts

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -409,7 +409,7 @@ interval = 1.0
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
 ;;date-alt = %A, %d %B %Y
-time= "%{A1:plasmawindowed org.kde.plasma.calendar &:}󰃭 %a, %d %b %Y W%W%{A}"
+time= "%{A1:gnome-calendar &:}󰃭 %a, %d %b %Y W%W%{A}"
 
 ; Available tags:
 ;   <label> (default)
@@ -834,9 +834,9 @@ format-connected-foreground = ${color.background}
 format-connected-overline = ${color.background}
 format-connected-underline = ${color.background}
 
-label-connected = "%{A1:plasmawindowed org.kde.plasma.networkmanagement &:}  %local_ip%%{A}"
+label-connected = "%{A1:XDG_CURRENT_DESKTOP=GNOME gnome-control-center wifi &:}  %local_ip%%{A}"
 
-label-disconnected = "%{A1:plasmawindowed org.kde.plasma.networkmanagement &:}󰖪  Disconnected%{A}"
+label-disconnected = "%{A1:XDG_CURRENT_DESKTOP=GNOME gnome-control-center wifi &:}󰖪  Disconnected%{A}"
 format-disconnected-background = ${color.primary}
 format-disconnected-foreground = ${color.background}
 format-disconnected-overline = ${color.background}
