Remove firefox shadows

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -6,4 +6,12 @@ wintypes:
   menu = { shadow = false; }
 };
 
+
+shadow-exclude = [
+ "name = 'Firefox'"
+];
+
+blur-background-exclude = [
+];
+
 corner-radius = 5
