--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-import = ["~/.config/alacritty/rose-pine.toml"]
+general.import = ["~/.config/alacritty/rose-pine.toml"]
 
 [env]
 WINIT_X11_SCALE_FACTOR="1"
