--- a/.config/i3/config
+++ b/.config/i3/config
@@ -62,7 +62,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindcode $mod+40 exec "rofi -no-config -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/launcher.rasi"
+bindsym $mod+d exec "rofi -no-config -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/launcher.rasi"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 #  bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -155,7 +155,7 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # move workspace to monitors
-bindsym $mod+Ctrl+greater move workspace to output next
+bindsym $mod+Ctrl+space move workspace to output next
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -257,3 +257,5 @@ client.unfocused         $text     $base $text  $overlay   $overlay
 client.urgent            $text     $base $text  $love      $love
 client.placeholder       $base     $base $text  $overlay   $overlay
 client.background        $base
+
+exec --no-startup-id setxkbmap real-prog-dvorak
