--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,10 +25,10 @@ bind -r l select-pane -R
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-bind-key -r Q run-shell "~/.local/bin/tmux-sessionizer ~/projects/cheerfy/admin.cheerfy.com"
-bind-key -r W run-shell "~/.local/bin/tmux-sessionizer ~/projects/cheerfy/cheerfy-lib"
-bind-key -r E run-shell "~/.local/bin/tmux-sessionizer ~/projects/cheerfy/static.cheerz.co"
-bind-key -r R run-shell "~/.local/bin/tmux-sessionizer ~/projects/cheerfy/pay.cheerfy.com"
+bind-key -r G run-shell "~/.local/bin/tmux-sessionizer ~/projects/cheerfy/admin.cheerfy.com"
+bind-key -r C run-shell "~/.local/bin/tmux-sessionizer ~/projects/cheerfy/cheerfy-lib"
+bind-key -r R run-shell "~/.local/bin/tmux-sessionizer ~/projects/cheerfy/static.cheerz.co"
+bind-key -r H run-shell "~/.local/bin/tmux-sessionizer ~/projects/cheerfy/pay.cheerfy.com"
 bind-key -r T run-shell "~/.local/bin/tmux-sessionizer ~/projects/cheerfy/portal.cheerfy.com"
 
 bind '"' split-window -v -c "#{pane_current_path}"
